--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
   <body>
+    
+    <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center  d-flex justify-content-center align-ite
+ms-center"> 
+
+<main>
+<h4> Kepada bapak/ibu/saudara/i</h4>
+<h1>Dino & Dini</h1>
+<p>Akan melangsungkan resepsi pernikahan dalam</p>
+
+<div class="countdown"> 
+
+
+</div>
+
+<a href="#" class="btn btn-lg bg-white mt-4"> Lihat undangan</a>
+</main>
+
+</section>
+
     <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
