--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     
     <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center  d-flex justify-content-center align-ite
-ms-center bg-dark text-light"> 
+ms-center"> 
 
 <main>
 <h4> Kepada bapak/ibu/saudara/i</h4>
