--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <body>
     
     <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center  d-flex justify-content-center align-ite
-ms-center mt-4"> 
+ms-center"> 
 
 <main>
-<h4> Kepada bapak/ibu/saudara/i</h4>
+<h4 class=" mt-4"> Kepada bapak/ibu/saudara/i</h4>
 <h1>Dino & Dini</h1>
 <p>Akan melangsungkan resepsi pernikahan dalam</p>
 
