--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&family=Work+Sans:wght@100;400;600;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="simplyCountdown.theme.default.css"/>
+    <script src="simplyCountdown.min.js"></script>
+
     
     <link href="style.css" rel="stylesheet"/>
   </head>
