--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ ms-center">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
 <script>
-  simplycountdown('.countdown', {} );
+  simplyCountdown('.countdown', {} );
 </script>
     
   </body>
