--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+8<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -45,7 +45,7 @@ ms-center">
             month: 9, // required
             day: 28, // required
             hours: 9, // Default is 0 [0-23] integer
-            minutes: 30, // Default is 0 [0-59] integer
+            minutes: 0, // Default is 0 [0-59] integer
             seconds: 0, // Default is 0 [0-59] integer
             words: { //words displayed into the countdown
                 days: { singular: 'Hari', plural: 'Hari' },
@@ -53,7 +53,7 @@ ms-center">
                 minutes: { singular: 'Menit', plural: 'Menit' },
                 seconds: { singular: 'Detik', plural: 'Detik' }
             },
-            plural: true, //use plurals
+          
             inline: false, //set to true to get an inline basic countdown like : 24 days, 4 hours, 2 minutes, 5 seconds
             inlineClass: 'simply-countdown-inline', //inline css span class in case of inline = true
             // in case of inline set to false
