--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ ms-center">
                 days: { singular: 'Hari', plural: 'Hari' },
                 hours: { singular: 'Jam', plural: 'Jam' },
                 minutes: { singular: 'Menit', plural: 'Menit' },
-                second: { singular: 'Detik', plural: 'Detik' }
+                seconds: { singular: 'Detik', plural: 'Detik' }
                 },
   } );
 </script>
