--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ ms-center">
 <h1>Dino & Dini</h1>
 <p>Akan melangsungkan resepsi pernikahan dalam</p>
 
-<div class="countdown"> 
+<div class="simply-Countdown"> 
 
 
 </div>
@@ -39,7 +39,7 @@ ms-center">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
 <script>
-  simplyCountdown('.countdown', {
+  simplyCountdown('.simply-Countdown', {
 
             year: 2023, // required
             month: 9, // required
