--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-8<!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -27,7 +27,6 @@ ms-center">
 <p>Akan melangsungkan resepsi pernikahan dalam</p>
 
 <div class="simply-countdown"> 
-
 
 </div>
 
