--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ ms-center">
 <h1>Dino & Dini</h1>
 <p>Akan melangsungkan resepsi pernikahan dalam</p>
 
-<div class="simply-countdown"> 
+<div class="simply-countdown sm-6 mx-auto"> 
 
 </div>
 
