--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@ ms-center">
 <h1>Dino & Dini</h1>
 <p>Akan melangsungkan resepsi pernikahan dalam</p>
 
-<div class="simply-countdown sm-6 mx-auto"> 
+<div class="container justify-content-center">
+  
+  <div class="simply-countdown"> 
 
+</div>
 </div>
 
 <a href="#" class="btn btn-lg bg-white mt-4"> Lihat undangan</a>
