--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ ms-center">
 <h1>Dino & Dini</h1>
 <p>Akan melangsungkan resepsi pernikahan dalam</p>
 
-<div class="container justify-content-center">
+<div class="container sm-6">
   
   <div class="simply-countdown"> 
 
